# crafting_interpreters

./: .gitignore  README.md  notes.txt
compiler_in_c/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  notes.txt  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm  vm.c  vm.h
compiler_in_c/lox_scripts/: benchmark.lox  block1.lox  class_0.lox  class_1.lox  class_4.lox  closure.lox  expresions.lox  fib1.lox  fib3.lox  for.lox  fun.lox  if2.lox  print.lox  var1.lox  var2.lox  var3.lox
compiler_in_rust/compiler/: Cargo.toml  test_debug.txt  test_output.txt  trace.txt
compiler_in_rust/lox_scripts/: benchmark.lox  block2.lox  class_0.lox  class_1.lox  class_2.lox  class_3.lox  class_4.lox  example2.lox  for.lox  if1.lox  plus_equal.lox  recursion.lox  var4.lox  while.lox
interpreter_in_python/: TODO.txt  example1.lox  example2.lox  fib.lox  grammar.txt  makefile  pyproject.toml  requirements.txt  scanner.py  test.lox  while_block.lox
interpreter_in_python/lox_scripts/: block.lox  class.lox  class_1.lox  class_5.lox  closure.lox  fib2.lox  fib3.lox  var.lox
interpreter_in_python/src/: ast_printer.py  environment.py  expr.py  interpreter.py  lox.py  lox_callable.py  lox_class.py  lox_function.py  lox_functionr.py  lox_instance.py  main.py  parser.py  resolver.py  return_exception.py  run_time_exception.py  scanner.py  stmt.py  token_.py
interpreter_in_python/tests/: ast_printer_test.py  ast_printer_tests.py  fib_function.lox  for.lox  integration_test.py  integration_tests.py  interpreter_test.py  interpreter_tests.py  lambda.lox  parser_test.py  parser_tests.py  scanner_test.py  scanner_tests.py  utils.py  while.lox
interpreter_in_python/tests/lox_scripts/: break_test.lox  class1.lox  class2.lox  class3.lox  class4.lox  class5.lox  class7.lox  fib.lox  lambda2.lox
interpreter_in_python/tools/: generate_ast.py
(+9 files in other folders)
