[project]
name = "interpreter_in_python"
version = "0.1.0"
description = "A simple interpreter implemented in Python"
requires-python = "==3.12"
license = {text = "MIT"}

keywords = ["interpreter", "language", "parser", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

dependencies = [
    "multimethod>=1.10",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pylint>=4.0.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ────────────────────────────────────────────────
#           Tool configurations
# ────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "PL", "UP", "B", "SIM", "C4"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]                      # ← added section
python_version = "3.12"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
pretty = true
incremental = true